--- a/src/scss/Account.scss
+++ b/src/scss/Account.scss
@@ -5,7 +5,6 @@
 
 body{
   color: white;
-  
   font-family: var(--main-font)
 }
 .background{
@@ -13,11 +12,12 @@ body{
   background-color: black;
   z-index: -1;
   height: 100vh;
+  width: 100vw;
 }
 .menu{
   position: absolute;
   width: 100vw;
-  height: 100vh;
+  height: 80vh;
 
   &__header{
     padding-top: 10%;
