--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,11 +3,11 @@
 .container{
   width: 100%;
   height: 100vh;
-  display: flex;
   flex-direction: column;
   position: absolute;
   z-index: 1000;  
   background-color: white;
+  display: none;
 
   .logo{
    margin: auto;
@@ -60,8 +60,7 @@
     display:block;
     position: relative;
     z-index: 1;
-    margin-right: auto;
-    margin-left:2%;
+    width: 100vw;
   }
 
   &__content{
@@ -75,7 +74,7 @@
 
   &__plus{
     position: absolute;
-    bottom: 0;
+    bottom:0;
     right:0;
     margin-right: 8%;
     margin-bottom: 3%;
@@ -87,7 +86,7 @@
     font-family:Helvetica;
     font-weight: bold;
     color: white;
-    font-size: 18px;
+    font-size: 25px;
   }
 }
 
