--- a/src/scss/divers.scss
+++ b/src/scss/divers.scss
@@ -34,6 +34,10 @@ body{
   margin-top: 5%;
   margin-left: 5%;
 }
+
+.headphones{
+  width: 100vw;
+}
 .main-article{
   font-family: var(--main-font);
   display: flex;
@@ -56,7 +60,7 @@ body{
   }
 
   &__img{
-    widows: 12rem;
+    width: 12rem;
     margin-left: auto;
     margin-right: auto;
   }
