--- a/src/scss/favorite-titles.scss
+++ b/src/scss/favorite-titles.scss
@@ -32,7 +32,7 @@ body{
     display:block;
     position: relative;
     z-index: 1;
-    margin-right: auto;
+    width: 100vw;
   }
 
   &__content{
